--- a/public/index.html
+++ b/public/index.html
@@ -6,19 +6,30 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FFFFFF" />
-    <meta
-      name="description"
-      content="Jorge Peñaranda's Personal Portfolio"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Jorge Peñaranda</title>
+    <title>Jorge Peñaranda | Desarrollador IT</title>
+    <meta name="description" content="Jorge Peñaranda's Personal Portfolio">
+    <meta name="keywords" content="Desarrollador Full-Stack, Desarrollador Web, HTML, CSS, JavaScript, Node.js, React, Angular, Vue.js, MongoDB, MySQL">
+    <meta name="author" content="JorgePeniaranda">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://jorgepeniaranda.me/">
+    <meta property="og:title" content="Jorge Peñaranda | Desarrollador IT">
+    <meta property="og:description" content="Jorge Peñaranda's Personal Portfolio">
+    <meta property="og:url" content="https://jorgepeniaranda.me/">
+    <meta property="og:image" content="https://jorgepeniaranda.me/logo512.png">
+    <meta property="og:type" content="website">
+    <meta name="twitter:title" content="Jorge Peñaranda | Desarrollador IT">
+    <meta name="twitter:description" content="Jorge Peñaranda's Personal Portfolio">
+    <meta name="twitter:url" content="https://jorgepeniaranda.me/">
+    <meta name="twitter:image" content="https://jorgepeniaranda.me/logo512.png">
+    <meta name="twitter:card" content="summary">
   </head>
   <body>
     <div id="root"></div>
     <noscript>
       <link rel="stylesheet" href="noscript.css">
-      Se requiere JavaScript para visualizar esta página
+      JavaScript is required to view this page
     </noscript>
   </body>
 </html>
