--- a/public/index.html
+++ b/public/index.html
@@ -5,25 +5,26 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#FFFFFF" />
+    <meta name="theme-color" content="#607cbf" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Jorge Peñaranda | Desarrollador IT</title>
-    <meta name="description" content="Jorge Peñaranda's Personal Portfolio">
-    <meta name="keywords" content="Desarrollador Full-Stack, Desarrollador Web, HTML, CSS, JavaScript, Node.js, React, Angular, Vue.js, MongoDB, MySQL">
+    <title>Jorge Peñaranda | Web Developer</title>
+    <meta name="description" content="I am Jorge Peñaranda, a web developer with experience in the development of websites and online applications. I am passionate about technology and enjoy creating innovative solutions that help improve the user experience on the web.">
+    <meta name="keywords" content="Jorge, Peñaranda, Jorge Peñaranda,Desarrollador Full-Stack, Desarrollador Web, HTML, CSS, JavaScript, Node.js, React, Angular, Vue.js, MongoDB, MySQL">
     <meta name="author" content="JorgePeniaranda">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://jorgepeniaranda.me/">
-    <meta property="og:title" content="Jorge Peñaranda | Desarrollador IT">
-    <meta property="og:description" content="Jorge Peñaranda's Personal Portfolio">
+    <meta property="og:title" content="Jorge Peñaranda | Web Developer">
+    <meta property="og:description" content="I am Jorge Peñaranda, a web developer with experience in the development of websites and online applications. I am passionate about technology and enjoy creating innovative solutions that help improve the user experience on the web.">
     <meta property="og:url" content="https://jorgepeniaranda.me/">
     <meta property="og:image" content="https://jorgepeniaranda.me/logo512.png">
     <meta property="og:type" content="website">
-    <meta name="twitter:title" content="Jorge Peñaranda | Desarrollador IT">
-    <meta name="twitter:description" content="Jorge Peñaranda's Personal Portfolio">
+    <meta name="twitter:title" content="Jorge Peñaranda | Web Developer">
+    <meta name="twitter:description" content="I am Jorge Peñaranda, a web developer with experience in the development of websites and online applications. I am passionate about technology and enjoy creating innovative solutions that help improve the user experience on the web.">
     <meta name="twitter:url" content="https://jorgepeniaranda.me/">
     <meta name="twitter:image" content="https://jorgepeniaranda.me/logo512.png">
     <meta name="twitter:card" content="summary">
+    <link rel="shortcut icon" href="https://jorgepeniaranda.me/logo512.png" />
   </head>
   <body>
     <div id="root"></div>
