--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
     <meta name="twitter:image" content="https://jorgepeniaranda.me/logo512.png">
     <meta name="twitter:card" content="summary">
     <link rel="shortcut icon" href="https://jorgepeniaranda.me/logo512.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet"> <!-- Font -->
   </head>
   <body>
     <div id="root"></div>
